--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dev_dependencies:
   # Mocking framework
   mockito: ^5.4.1
 
+  # A build system for Dart code generation
+  build_runner: ^2.4.4
+
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices.
   flutter_lints: ^2.0.0
